# learn-ai

./: README.md
PyTorch深度学习实践/2.梯度下降算法/: GradientDescent2.py
PyTorch深度学习实践/4.使用pytorch实现线性回归/: linear_nn.py
PyTorch深度学习实践/6.多维特征处理/: multiplyFeature.py
PyTorch深度学习实践/8.多分类问题/: multiply.py
learn_pytorch/: train.py
nlp/: .~Bert 原理讲解.pptx  Bert 原理讲解.pptx
npu/RKNN Tooklit2/01_export_rknn/: export_rknn.py
npu/RKNN Tooklit2/02_inference/: inference_pytorch.py  inference_rknn.py
npu/RKNN Tooklit2/03_accuracy_analysis/: accuracy_analysis.py
npu/RKNN Tooklit2/04_hybrid_quantization/: step1.py  step2.py
npu/RKNN Tooklit2/05_eval/: eval.py
npu/RKNN Tooklit2/06_rknntoolkitlite2/: rknntoolkitlite2.py
npu/RKNN Tooklit2/07_yolov5/: camera_demo.py  test.py  test_rknn.py  test_rknn_lite.py  test_rknn_lite_mipi.py  test_rknn_lite_usb.py  test_rknn_lite_video.py
npu/RKNN Tooklit2/08_rknn-multi-threaded-nosigmoid/: func.py  main.py  main_mipi.py  main_usb.py  rknnpool.py
npu/RKNN Tooklit2/09_sort_rknn/: requirements.txt  test.py  test_rknn.py  test_rknn_lite.py  test_rknn_lite_video.py
npu/RKNPU2/00_example/: CMakeLists.txt
npu/RKNPU2/00_example/src/: main.cc
npu/RKNPU2/01_resnet18/: CMakeLists.txt
npu/RKNPU2/01_resnet18/src/: main.cc
npu/RKNPU2/02_non_copy/: CMakeLists.txt  build.sh
npu/RKNPU2/02_non_copy/src/: main.cc
npu/RKNPU2/03_rknn-cpp-Multithreading-main/: CMakeLists.txt
npu/RKNPU2/03_rknn-cpp-Multithreading-main/include/: rknnPool.hpp
npu/RKNPU2/03_rknn-cpp-Multithreading-main/src/: main.cc
npu/RKNPU2/04_sort_rknn/: CMakeLists.txt  build-linux_RK3588.sh
npu/RKNPU2/04_sort_rknn/include/: rknnPool.hpp
npu/RKNPU2/04_sort_rknn/src/: main.cc
